docs/i18n/ko/docusaurus-plugin-content-docs/version-4.1.1/api/JustifiedInfiniteGridOptions.mdx
---
custom_edit_url: null
---

### JustifiedInfiniteGridOptions {#JustifiedInfiniteGridOptions}

<div className="bulma-tags">

</div>

**Type**: TSInterface

|PROPERTY|TYPE|DESCRIPTION|
|:---:|:---:|:---:|
|horizontal|boolean|스크롤 이동 방향. (true: 가로방향, false: 세로방향) horizontal이 false 면 <code>inlinePos</code>는 left, <code>inlineSize</code>는 width, <code>contentPos</code>는 top, <code>contentSize</code>는 height다. horizontal이 true면 <code>inlinePos</code>는 top, <code>inlineSize</code>는 height, <code>contentPos</code>는 left, <code>contentSize</code>는 width이다. (default: false)|
|percentage|Array&lt;"position" \| "size"&gt; \| boolean|item의 css size와 position를 %로 설정할지 여부.|
|isEqualSize|boolean|카드 엘리먼트의 크기가 동일한지 여부. 배치될 카드 엘리먼트의 크기가 모두 동일할 때 이 옵션을 'true'로 설정하면 레이아웃 배치 성능을 높일 수 있다. (default: false)|
|isConstantSize|boolean|모든 카드 엘리먼트의 크기가 불변일 때 이 옵션을 'true'로 설정하면 레이아웃 배치 성능을 높일 수 있다. (default: false)|
|gap|number|아이템들 사이의 공간. (default: 5)|
|attributePrefix|string|엘리먼트의 데이타 속성에 사용할 접두사. (default: &quot;data-grid-&quot;)|
|resizeDebounce|number|리사이즈 이벤트에 설정할 디바운스 시간. (default: 100)|
|maxResizeDebounce|number|리사이즈 이벤트를 디바운스할 수 있는 최대 시간(0은 미설정이다). (default: 0)|
|autoResize|boolean|렌더링시 상단이 비어있을 때 아웃라인을 0으로 이동시킬지 여부. 하지만 상단보다 넘치는 경우 아웃라인을 0으로 강제 이동한다. (default: true)|
|useFit|boolean|window의 resize 이벤트 이후 자동으로 resize()메소드를 호출할지의 여부. (default: true)|
|useTransform|boolean|left, top css 속성 쓰는 대신 transform 속성을 사용할지 여부.|
|renderOnPropertyChange|boolean|property의 변화를 통해 자동으로 render를 할지 여부.|
|preserveUIOnDestroy|boolean|destroy 시 기존 컨테이너, 아이템의 UI를 보존할지 여부.|
|defaultDirection|"start" \| "end"|render옵션에서 direction을 미설정시의 기본 방향값.|
|externalItemRenderer|ItemRenderer \| null|외부에서 직접 ItemRenderer를 설정할 수 있다.|
|externalContainerManager|ContainerManager \| null|외부에서 직접 ContainerManager를 설정할 수 있다.|
|columnRange|number \| number[]| 한 줄에 들어가는 아이템의 최소, 최대 개수. (default: [1, 8]) |
|rowRange|number \| number[]| 한 그룹에 들어가는 행의 최소, 최대 개수, 0은 미설정이다. (default: 0) |
|sizeRange|number \| number[]|아이템이 조정되는 최소, 최대 사이즈. 계산이 되지 않는 경우 최소, 최대 사이즈를 벗어날 수 있다. (default: [0, Infinity])|
|displayedRow|number|컨테이너 크기에 계산될 최대 row 개수. overflow: hidden을 설정하면 화면에 가릴 수 있다. -1은 미설정이다. (default: -1)|
|isCroppedSize|boolean|row사이즈가 sizeRange에 벗어나면 크롭할지 여부. true로 설정하면 비율이 깨질 수 있다. (default: false)|
|horizontal|boolean|스크롤 이동 방향. (true: 가로방향, false: 세로방향) horizontal이 false 면 <code>inlinePos</code>는 left, <code>inlineSize</code>는 width, <code>contentPos</code>는 top, <code>contentSize</code>는 height다. horizontal이 true면 <code>inlinePos</code>는 top, <code>inlineSize</code>는 height, <code>contentPos</code>는 left, <code>contentSize</code>는 width이다. (default: false)|
|percentage|Array&lt;"position" \| "size"&gt; \| boolean|item의 css size와 position를 %로 설정할지 여부.|
|isEqualSize|boolean|카드 엘리먼트의 크기가 동일한지 여부. 배치될 카드 엘리먼트의 크기가 모두 동일할 때 이 옵션을 'true'로 설정하면 레이아웃 배치 성능을 높일 수 있다. (default: false)|
|isConstantSize|boolean|모든 카드 엘리먼트의 크기가 불변일 때 이 옵션을 'true'로 설정하면 레이아웃 배치 성능을 높일 수 있다. (default: false)|
|gap|number|아이템들 사이의 공간. (default: 5)|
|attributePrefix|string|엘리먼트의 데이타 속성에 사용할 접두사. (default: &quot;data-grid-&quot;)|
|resizeDebounce|number|리사이즈 이벤트에 설정할 디바운스 시간. (default: 100)|
|maxResizeDebounce|number|리사이즈 이벤트를 디바운스할 수 있는 최대 시간(0은 미설정이다). (default: 0)|
|autoResize|boolean|렌더링시 상단이 비어있을 때 아웃라인을 0으로 이동시킬지 여부. 하지만 상단보다 넘치는 경우 아웃라인을 0으로 강제 이동한다. (default: true)|
|useFit|boolean|window의 resize 이벤트 이후 자동으로 resize()메소드를 호출할지의 여부. (default: true)|
|useTransform|boolean|left, top css 속성 쓰는 대신 transform 속성을 사용할지 여부.|
|renderOnPropertyChange|boolean|property의 변화를 통해 자동으로 render를 할지 여부.|
|preserveUIOnDestroy|boolean|destroy 시 기존 컨테이너, 아이템의 UI를 보존할지 여부.|
|defaultDirection|"start" \| "end"|render옵션에서 direction을 미설정시의 기본 방향값.|
|externalItemRenderer|ItemRenderer \| null|외부에서 직접 ItemRenderer를 설정할 수 있다.|
|externalContainerManager|ContainerManager \| null|외부에서 직접 ContainerManager를 설정할 수 있다.|
|container|boolean \| string \| HTMLElement|container를 적용할 대상. false면 자기 자신, true면 container를 생성. string 또는 HTMLElement는 직접 대상을 지정. (default: false)|
|containerTag|string|container를 생성한다면 container의 tag를 정할 수 있다. (default: &quot;div&quot;)|
|threshold|number|다음 아이템 그룹을 추가하기 위한 스크롤 영역의 크기. (default: 100)|
|useRecycle|boolean|보이는 영역의 DOM만 보여줄지 여부. (default: true)|
|gridConstructor|GridFunction|Infinite 기능을 적용할 Grid 클래스.|
|renderer|Renderer \| null| DOM을 렌더하는 클래스. |

